--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maze1</title>
-    <!-- <link rel="stylesheet" href="./style1.css"> -->
+    <link rel="stylesheet" href="./style1.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
         <div id="menu">
             <div class="custom-select">
                 <select id="diffSelect">
-                    <option value="10">Easy</option>
-                    <option value="15">Medium</option>
-                    <option value="25">Hard</option>
-                    <option value="38">Extreme</option>
+                    <option value="10">Facile</option>
+                    <option value="15">Moyen</option>
+                    <option value="25">Difficile</option>
+                    <option value="38">Extrême</option>
                 </select>
             </div>
             <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
